--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start": "serve dist -s -L -p ${PORT:-3000}",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -15,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
     "react-slick": "^0.30.2",
+    "serve": "^14.2.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.15"
