--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "serve dist -s -L -p ${PORT:-3000}",
+    "start": "serve dist -s -L -p 3000",
     "lint": "eslint .",
     "preview": "vite preview"
   },
